optimasikode dan  swagger
