# docs/swagger.json
@@ -740,63 +740,63 @@
                         "type": "string",
                         "description": "dateStarted",
                         "name": "dateStarted",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "dateEnded",
                         "name": "dateEnded",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "integer",
                         "description": "businessTransactionTypeId",
                         "name": "businessTransactionTypeId",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "integer",
                         "description": "businessTransactionItemId",
                         "name": "businessTransactionItemId",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "integer",
                         "description": "provinceId",
                         "name": "provinceId",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "integer",
                         "description": "cityId",
                         "name": "cityId",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "integer",
                         "description": "districtId",
                         "name": "districtId",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "integer",
                         "description": "villageId",
                         "name": "villageId",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "integer",
                         "description": "businessCategoryId",
                         "name": "businessCategoryId",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -1223,6 +1223,9 @@
                 "countryId": {
                     "type": "integer"
                 },
+                "createdAt": {
+                    "type": "string"
+                },
                 "districtId": {
                     "type": "integer"
                 },
@@ -1426,7 +1429,6 @@
         "web.BusinessUpdateRequest": {
             "type": "object",
             "required": [
-                "address",
                 "businessCategoryId",
                 "cityId",
                 "countryId",
